# backend/src/main/java/com/rolingvistica/backend/controller/AnswerApiController.java
@@ -3,6 +3,7 @@ package com.rolingvistica.backend.controller;
 import com.rolingvistica.backend.service.AnswerService;
 import io.rolingvistica.api.AnswerApi;
 import io.rolingvistica.dto.AnswerDTO;
+import io.rolingvistica.dto.GroupedAnswerDTO;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -14,6 +15,18 @@ import java.util.List;
 @RequiredArgsConstructor
 public class AnswerApiController implements AnswerApi {
     private final AnswerService answerService;
+
+    /**
+     * GET /answer/{requirementId}/grouped : Fetch a List of unique answrs for a requirement.
+     *
+     * @param requirementId The ID of the requirement to which the answers were given (required)
+     * @return List of answers (status code 200)
+     */
+    @Override
+    public ResponseEntity<List<GroupedAnswerDTO>> getAnswersByRequirementIdGroupedByProvidedAnswer(Long requirementId) {
+        return new ResponseEntity<>(answerService.getAnswersGroupedByProvidedAnswer(requirementId), HttpStatus.OK);
+    }
+
     /**
      * GET /answer/{requirementId} : Fetch a list of answers of a requirement
      *
